Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16239

Many test in rpl suite fails

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3(EOL)
    • 10.3.19, 10.4.9
    • Replication
    • None
    • all

    Description

      For the time these test are failing in 10.3 (with --repeat)
      rpl.rpl_skip_error rpl.rpl_000011 rpl.rpl_binlog_errors rpl.rpl_row_find_row_debug rpl.rpl_mdev382 rpl.rpl_parallel2 rpl.rpl_ip_mix rpl.rpl_ip_mix2 rpl.rpl_rotate_logs rpl.circular_serverid0

      And these are failing in buildbot after this commit
      442a6e6b257e335f70730b0e18394c2f638f2962
      rpl_parallel2, rpl_semi_sync_after_sync

      How to reproduce
      ./mtr rpl.rpl_skip_error --repeat 2 (for each test) , Although these test fail are hard to reproduce rpl_parallel2, rpl_semi_sync_after_sync

      Attachments

        Activity

          People

            sachin.setiya.007 Sachin Setiya (Inactive)
            sachin.setiya.007 Sachin Setiya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5.75d
                5.75d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.